--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/calendario/images/principal-cuadrado.jpg" />
+    <link rel="icon" type="image/svg+xml" href="vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calendario</title>
-    <script type="module" crossorigin src="/calendario/assets/main-0182e46d.js"></script>
-    <link rel="modulepreload" crossorigin href="/calendario/assets/style-90b54b6a.js">
-    <link rel="stylesheet" href="/calendario/assets/style-3563a3af.css">
+    <script type="module" crossorigin src="/calendar/assets/main-0182e46d.js"></script>
+    <link rel="modulepreload" crossorigin href="/calendar/assets/style-90b54b6a.js">
+    <link rel="stylesheet" href="/calendar/assets/style-3563a3af.css">
   </head>
   <body class="bg-zinc-900 text-white">
     <div class="sm:flex justify-center items-center h-screen gap-x-10">
