--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/images/principal-cuadrado.jpg" />
+    <link rel="icon" type="image/svg+xml" href="vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calendario</title>
   </head>
   <body class="bg-zinc-900 text-white">
     <div class="sm:flex justify-center items-center h-screen gap-x-10">
       <!-- Image -->
-      <img id="myDate" src="ruta/a/tu/imagen.jpg" alt="Descripción de la imagen" class="md:w-1/4 h-auto w-full rounded-md ">
+      <img id="myDate" src="" alt="Descripción de la imagen" class="md:w-1/4 h-auto w-full rounded-md ">
       <!--  -->
       <div class="bg-zinc-700 p-10 rounded-md w-lg md:w-1/4 ">
         <p id="monthName" class="text-center" > </p>
