--- a/secreto/easter.html
+++ b/secreto/easter.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="../images/principal-cuadrado.jpg" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="../src/style.css">
     <title>Secretiño</title>
 </head>
 <body class="bg-zinc-900 text-white  sm:flex flex items-center justify-center h-screen">
 
     <div class="bg-zinc-700 p-10 rounded-md w-lg h-sm md:w-1/4">
         <h1 class="text-center text-3xl py-2"><strong>☁️AM🐵</strong></h1>
-        <img class="mx-auto rounded-lg" src="./images/principal-cuadrado.jpg" alt="UwU" height="60px" width="60px">
+        <img class="mx-auto rounded-lg" src="../images/principal-cuadrado.jpg" alt="UwU" height="60px" width="60px">
         <p class="text-justify text-sm">
             
             <strong>¡Lo descrubriste!</strong>
@@ -26,7 +27,7 @@
         <p class="text-center text-xl"> 🫰 ¡Te amo!🫰</p>
         <p class="text-center text-xs">pd. No importa si yo te dije como llegaras aquí :v Lo importante es el mensaje ❤️</p>
     </div>
-    <script type="module" src="/src/easter.ts"></script>
+    <script type="module" src="easter.ts"></script>
         
 </body>
 </html>
