--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calendario</title>
-    <script type="module" crossorigin src="/calendar/assets/main-bcd54dab.js"></script>
-    <link rel="modulepreload" crossorigin href="/calendar/assets/style-90b54b6a.js">
-    <link rel="stylesheet" href="/calendar/assets/style-3563a3af.css">
+    <script type="module" crossorigin src="/calendar/assets/main-ee10e005.js"></script>
+    <link rel="modulepreload" crossorigin href="/calendar/assets/style-cf5b8e01.js">
+    <link rel="stylesheet" href="/calendar/assets/style-ebed0482.css">
   </head>
   <body class="bg-zinc-900 text-white">
     <div class="sm:flex justify-center items-center h-screen gap-x-10">
@@ -15,6 +15,7 @@
       <img id="myDate" src="" alt="Descripción de la imagen" class="md:w-1/4 h-auto w-full rounded-md ">
       <!--  -->
       <div class="bg-zinc-700 p-10 rounded-md w-lg md:w-1/4 ">
+        <p id="yearName" class="text-center text-2xl bg-blue-400"> </p>
         <p id="monthName" class="text-center" > </p>
         <div class="sm:flex flex-col justify-around py-2 px-2 text-center">
           <div class="flex justify-around ">
