--- a/secreto/easter.html
+++ b/secreto/easter.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Secretiño</title>
-  <script type="module" crossorigin src="/calendar/assets/secreto-047680c0.js"></script>
-  <link rel="modulepreload" crossorigin href="/calendar/assets/style-cf5b8e01.js">
-  <link rel="stylesheet" href="/calendar/assets/style-ebed0482.css">
+  <script type="module" crossorigin src="/calendar/assets/secreto-5bf0b72f.js"></script>
+  <link rel="modulepreload" crossorigin href="/calendar/assets/style-f961ab58.js">
+  <link rel="stylesheet" href="/calendar/assets/style-555fe42b.css">
 </head>
 <body class="bg-zinc-900 text-white  sm:flex flex items-center justify-center h-screen">
 
     <div class="bg-zinc-700 p-10 rounded-md w-lg h-sm md:w-1/4">
         <h1 class="text-center text-3xl py-2"><strong>☁️AM🐵</strong></h1>
-        <img class="mx-auto rounded-lg" src="../images/principal-cuadrado.jpg" alt="UwU" height="60px" width="60px">
+        <img class="mx-auto rounded-lg" src="../images/principal-cuadrado.png" alt="UwU" height="60px" width="60px">
         <p class="text-justify text-sm">
             
             <strong>¡Lo descrubriste!</strong>
