Documentation added Events changed and the way of the listener are added

--- a/secreto/easter.html
+++ b/secreto/easter.html
@@ -12,7 +12,7 @@
 
     <div class="bg-zinc-700 p-10 rounded-md w-lg h-sm md:w-1/4">
         <h1 class="text-center text-3xl py-2"><strong>☁️AM🐵</strong></h1>
-        <img class="mx-auto rounded-lg" src="../images/principal-cuadrado.jpg" alt="UwU" height="60px" width="60px">
+        <img class="mx-auto rounded-lg" src="../images/principal-cuadrado.png" alt="UwU" height="60px" width="60px">
         <p class="text-justify text-sm">
             
             <strong>¡Lo descrubriste!</strong>
